--- a/eda_and_backfill_feature_group.ipynb
+++ b/eda_and_backfill_feature_group.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-07T17:57:43.637379400Z",
-     "start_time": "2024-01-07T17:57:43.626861300Z"
+     "end_time": "2024-01-08T18:44:14.028459Z",
+     "start_time": "2024-01-08T18:44:03.200682100Z"
     }
    },
    "outputs": [],
@@ -20,13 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connection closed.\n",
       "Connected. Call `.close()` to terminate connection gracefully.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/196759\n",
@@ -41,27 +40,27 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-07T17:57:46.708374900Z",
-     "start_time": "2024-01-07T17:57:45.105361700Z"
+     "end_time": "2024-01-08T18:44:16.230539700Z",
+     "start_time": "2024-01-08T18:44:14.032462200Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
-      "text/plain": "    value  severityLevel\n0   0.443              2\n1   0.428              2\n2   0.418              2\n3   0.440              2\n4   0.437              2\n..    ...            ...\n91  0.580              3\n92  0.588              3\n93  0.596              3\n94  0.593              3\n95  0.618              3\n\n[96 rows x 2 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>value</th>\n      <th>severityLevel</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.443</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.428</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.418</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.440</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.437</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>91</th>\n      <td>0.580</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>92</th>\n      <td>0.588</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>93</th>\n      <td>0.596</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>94</th>\n      <td>0.593</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>95</th>\n      <td>0.618</td>\n      <td>3</td>\n    </tr>\n  </tbody>\n</table>\n<p>96 rows × 2 columns</p>\n</div>"
+      "text/plain": "     value  severityLevel\n0    0.443              3\n1    0.428              3\n2    0.418              3\n3    0.440              3\n4    0.437              3\n..     ...            ...\n187  0.683              2\n188  0.691              2\n189  0.675              2\n190  0.701              2\n191  0.703              2\n\n[192 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>value</th>\n      <th>severityLevel</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.443</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.428</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.418</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.440</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.437</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>187</th>\n      <td>0.683</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>188</th>\n      <td>0.691</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>189</th>\n      <td>0.675</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>190</th>\n      <td>0.701</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>191</th>\n      <td>0.703</td>\n      <td>2</td>\n    </tr>\n  </tbody>\n</table>\n<p>192 rows × 2 columns</p>\n</div>"
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"measures/filtered_stage_measures_2904TH_2024-01-05.csv\")\n",
+    "df = pd.read_csv(\"measures/measures_dataset.csv\")\n",
     "# Keep only the 'value' and 'severityLevel' columns\n",
     "selected_columns = ['value', 'severityLevel']\n",
     "flood_df = df[selected_columns]\n",
@@ -70,28 +69,28 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-07T17:57:47.458900800Z",
-     "start_time": "2024-01-07T17:57:47.397701600Z"
+     "end_time": "2024-01-08T18:44:16.298331800Z",
+     "start_time": "2024-01-08T18:44:16.235048900Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 96 entries, 0 to 95\n",
+      "RangeIndex: 192 entries, 0 to 191\n",
       "Data columns (total 2 columns):\n",
       " #   Column         Non-Null Count  Dtype  \n",
       "---  ------         --------------  -----  \n",
-      " 0   value          96 non-null     float64\n",
-      " 1   severityLevel  96 non-null     int64  \n",
+      " 0   value          192 non-null    float64\n",
+      " 1   severityLevel  192 non-null    int64  \n",
       "dtypes: float64(1), int64(1)\n",
-      "memory usage: 1.6 KB\n"
+      "memory usage: 3.1 KB\n"
      ]
     }
    ],
@@ -101,21 +100,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-07T17:58:03.429113100Z",
-     "start_time": "2024-01-07T17:58:03.375618400Z"
+     "end_time": "2024-01-08T18:44:16.413614600Z",
+     "start_time": "2024-01-08T18:44:16.320422900Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "           value  severityLevel\ncount  96.000000      96.000000\nmean    0.527135       2.645833\nstd     0.050164       0.480771\nmin     0.418000       2.000000\n25%     0.489750       2.000000\n50%     0.527500       3.000000\n75%     0.564250       3.000000\nmax     0.618000       3.000000",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>value</th>\n      <th>severityLevel</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>96.000000</td>\n      <td>96.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>0.527135</td>\n      <td>2.645833</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>0.050164</td>\n      <td>0.480771</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.418000</td>\n      <td>2.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>0.489750</td>\n      <td>2.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>0.527500</td>\n      <td>3.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>0.564250</td>\n      <td>3.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>0.618000</td>\n      <td>3.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "            value  severityLevel\ncount  192.000000     192.000000\nmean     0.590042       2.177083\nstd      0.074677       0.382737\nmin      0.418000       2.000000\n25%      0.527750       2.000000\n50%      0.608500       2.000000\n75%      0.653000       2.000000\nmax      0.703000       3.000000",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>value</th>\n      <th>severityLevel</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>192.000000</td>\n      <td>192.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>0.590042</td>\n      <td>2.177083</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>0.074677</td>\n      <td>0.382737</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.418000</td>\n      <td>2.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>0.527750</td>\n      <td>2.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>0.608500</td>\n      <td>2.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>0.653000</td>\n      <td>2.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>0.703000</td>\n      <td>3.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,20 +125,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-07T17:58:05.260098300Z",
-     "start_time": "2024-01-07T17:58:05.224319700Z"
+     "end_time": "2024-01-08T18:44:16.476496200Z",
+     "start_time": "2024-01-08T18:44:16.346956200Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
-      "text/plain": "severityLevel\n3    62\n2    34\nName: count, dtype: int64"
+      "text/plain": "severityLevel\n2    158\n3     34\nName: count, dtype: int64"
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,14 +149,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-07T17:58:12.121329600Z",
-     "start_time": "2024-01-07T17:58:12.084252300Z"
+     "end_time": "2024-01-08T18:44:16.487018Z",
+     "start_time": "2024-01-08T18:44:16.391806500Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stderr",
@@ -167,20 +166,12 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Feature Group created successfully, explore it at \n",
-      "https://c.app.hopsworks.ai:443/p/196759/fs/196678/fg/396621\n"
-     ]
-    },
-    {
      "data": {
-      "text/plain": "Uploading Dataframe: 0.00% |          | Rows 0/96 | Elapsed Time: 00:00 | Remaining Time: ?",
+      "text/plain": "Uploading Dataframe: 0.00% |          | Rows 0/192 | Elapsed Time: 00:00 | Remaining Time: ?",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "39fd9d87055e479eb9d4be555a7837f0"
+       "model_id": "3010fa6a48d4412e8fe0a4c9b1237eb0"
       }
      },
      "metadata": {},
@@ -197,9 +188,9 @@
     },
     {
      "data": {
-      "text/plain": "(<hsfs.core.job.Job at 0x2e22bb49700>, None)"
+      "text/plain": "(<hsfs.core.job.Job at 0x23bbc281cd0>, None)"
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,18 +206,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-07T18:19:42.018012700Z",
-     "start_time": "2024-01-07T18:19:33.677629100Z"
+     "end_time": "2024-01-08T18:44:23.470059600Z",
+     "start_time": "2024-01-08T18:44:16.392804700Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-08T18:44:23.513221900Z",
+     "start_time": "2024-01-08T18:44:23.473060200Z"
+    }
    }
   }
  ],
